--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "^51.0.28",
+    "expo": "~51.0.31",
     "expo-image-picker": "~15.0.7",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "react-native-svg-charts": "^5.4.0",
+    "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
