--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-device": "~6.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-network": "~6.0.1",
+    "expo-notifications": "~0.28.18",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -33,12 +34,14 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.7.1",
+    "react-native-svg": "15.2.0",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "expo-application": "~5.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "private": true
 }
