--- a/package.json
+++ b/package.json
@@ -1,87 +1,48 @@
 {
-  "name": "itprogerreact",
-  "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "test": "jest",
-    "dev": "nodemon recipeService.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-<<<<<<< HEAD
-    "@expo/metro-runtime": "~3.2.3",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "4.5.2",
-    "@react-native-picker/picker": "^2.7.5",
-=======
-    "@expo/vector-icons": "^14.0.3",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-community/slider": "4.5.2",
-    "@react-native-picker/picker": "2.7.5",
->>>>>>> cd222376ff367cc164ee8483e2de7e352228f8f0
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.7",
-<<<<<<< HEAD
-    "cors": "^2.8.5",
-    "d3-array": "^3.2.4",
-    "expo": "^51.0.38",
-    "expo-application": "~5.9.1",
-    "expo-device": "^6.0.2",
-    "expo-image-picker": "~15.0.7",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
-=======
-    "expo": "~51.0.31",
-    "expo-constants": "~16.0.2",
-    "expo-device": "~6.0.2",
-    "expo-image-picker": "~15.0.7",
-    "expo-network": "~6.0.1",
-    "expo-notifications": "~0.28.18",
-    "expo-splash-screen": "~0.27.6",
->>>>>>> cd222376ff367cc164ee8483e2de7e352228f8f0
-    "expo-status-bar": "~1.12.1",
-    "nodemon": "^3.1.4",
-    "react": "18.2.0",
-<<<<<<< HEAD
-    "react-dom": "18.2.0",
-=======
->>>>>>> cd222376ff367cc164ee8483e2de7e352228f8f0
-    "react-native": "0.74.5",
-    "react-native-animatable": "^1.4.0",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-device-info": "^13.0.0",
-    "react-native-gesture-handler": "~2.16.1",
-<<<<<<< HEAD
-    "react-native-get-random-values": "~1.11.0",
-=======
->>>>>>> cd222376ff367cc164ee8483e2de7e352228f8f0
-    "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.7.1",
-    "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^10.1.0",
-<<<<<<< HEAD
-    "react-native-web": "~0.19.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "jest": "^29.7.0",
-    "nock": "^13.5.5"
-=======
-    "expo-application": "~5.9.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "babel-plugin-module-resolver": "^5.0.2"
->>>>>>> cd222376ff367cc164ee8483e2de7e352228f8f0
-  },
-  "private": true
-}
+    "name": "itprogerreact",
+    "version": "1.0.0",
+    "main": "expo/AppEntry.js",
+    "scripts": {
+      "start": "expo start",
+      "android": "expo start --android",
+      "ios": "expo start --ios",
+      "web": "expo start --web"
+    },
+    "dependencies": {
+      "@expo/vector-icons": "^14.0.3",
+      "@react-native-community/datetimepicker": "8.0.1",
+      "@react-native-community/slider": "4.5.2",
+      "@react-native-picker/picker": "2.7.5",
+      "@react-navigation/bottom-tabs": "^6.6.1",
+      "@react-navigation/native": "^6.1.18",
+      "@react-navigation/stack": "^6.4.1",
+      "axios": "^1.7.7",
+      "expo": "~51.0.31",
+      "expo-constants": "~16.0.2",
+      "expo-device": "~6.0.2",
+      "expo-image-picker": "~15.0.7",
+      "expo-network": "~6.0.1",
+      "expo-notifications": "~0.28.18",
+      "expo-splash-screen": "~0.27.6",
+      "expo-status-bar": "~1.12.1",
+      "react": "18.2.0",
+      "react-native": "0.74.5",
+      "react-native-animatable": "^1.4.0",
+      "react-native-chart-kit": "^6.12.0",
+      "react-native-gesture-handler": "~2.16.1",
+      "react-native-picker-select": "^9.3.1",
+      "react-native-reanimated": "~3.10.1",
+      "react-native-safe-area-context": "4.10.5",
+      "react-native-screens": "3.31.1",
+      "react-native-svg": "15.2.0",
+      "react-native-svg-charts": "^5.4.0",
+      "react-native-vector-icons": "^10.1.0",
+      "expo-application": "~5.9.1"
+    },
+    "devDependencies": {
+      "@babel/core": "^7.24.0",
+      "babel-plugin-module-resolver": "^5.0.2"
+    },
+    "private": true
+  }
+  
